scripts/nullaway/wpi/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8.txt
../wpi/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/TCPClientLoop.java:76: error: [NullAway] dereferenced expression cb is @Nullable
                    cb.onError(TCPClientLoop.this, une);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/TCPClientLoop.java:94: error: [NullAway] dereferenced expression cb is @Nullable
                cb.onError(this, t);
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/TCPClientLoop.java:540: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.cb = cb;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/TCPServerLoop.java:27: error: [NullAway] dereferenced expression cb is @Nullable
            cb.onConnect(this, ssc);
              ^
    (see http://t.uber.com/nullaway )
../wpi/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/TCPServerLoop.java:44: error: [NullAway] dereferenced expression cb is @Nullable
            cb.onError(this, ioe);
              ^
    (see http://t.uber.com/nullaway )
5 errors
